complete package refactoring, added initial osgi support